tests: finished  unit tests